# EratosthenesSieve

./: .gitignore  CMakeLists.txt  README.md  cmake_vars.h.in  cpu_info.cpp  cpu_info.h  eratosthenes_sieve.cpp  eratosthenes_sieve.h  factorization_wheel_demo.cpp  prime_sieve_bench.cpp  raspberrypi5.txt  show_cpu_caches.cpp
results/: overview.txt
results/old/: ryzen7950x.txt
results/old/raspberrypi5/: sieve_wheel_2.txt  sieve_wheel_2_3_5.txt
results/old/ryzen7950x/: wheel_2_3.txt  wheel_2_3_5.txt
results/raspberrypi5/: sieve_wheel_2.txt  sieve_wheel_2_3.txt  sieve_wheel_2_3_5.txt  wheel_comparison.txt
results/ryzen7950x/: sieve_wheel_2.txt  sieve_wheel_2_3.txt  sieve_wheel_2_3_5.txt  wheel_2.txt  wheel_comparison.txt
